Correct page transition sizing on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,3 +17,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.page_transition-enter {
+  position: absolute;
+  width: 100vw;
+  height: calc(var(--vh, 1vh) * 100);
+  transform: translateX(100%);
+  transition: transform 0.6s ease;
+}
+
+.page_transition-enter-active {
+  transform: translateX(0%);
+}
